--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Hello, World!</h1>
   <p>Welcome to your HTML5 page.</p>
+  <p>The original range of Canis lupus consisted of the majority of the Northern hemisphere -- from the Arctic continuing south to a latitude of 20° S, which runs through southern Central Mexico, northern Africa, and southern Asia. However, due to habitat destruction, environmental change, persecution by humans, and other barriers to population growth, gray wolf populations are now found only in a few areas of the contiguous United States, Alaska, Canada, Mexico (a small population), and Eurasia.</p>
 </body>
 </html>
