--- a/index.html
+++ b/index.html
@@ -10,5 +10,72 @@
   <h1>Hello, World!</h1>
   <p>Welcome to your HTML5 page.</p>
   <p>The original range of Canis lupus consisted of the majority of the Northern hemisphere -- from the Arctic continuing south to a latitude of 20° S, which runs through southern Central Mexico, northern Africa, and southern Asia. However, due to habitat destruction, environmental change, persecution by humans, and other barriers to population growth, gray wolf populations are now found only in a few areas of the contiguous United States, Alaska, Canada, Mexico (a small population), and Eurasia.</p>
+  <table border="1">
+  <thead>
+    <tr>
+      <th>Super Bowl</th>
+      <th>Season</th>
+      <th>Date</th>
+      <th>Winner</th>
+      <th>Score</th>
+      <th>Loser</th>
+      <th>MVP</th>
+      <th>Stadium (City)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>LVIII</td>
+      <td>2023</td>
+      <td>Feb 11, 2024</td>
+      <td>Kansas City Chiefs</td>
+      <td>25–22</td>
+      <td>San Francisco 49ers</td>
+      <td>Patrick Mahomes</td>
+      <td>Allegiant Stadium (Las Vegas)</td>
+    </tr>
+    <tr>
+      <td>LVII</td>
+      <td>2022</td>
+      <td>Feb 12, 2023</td>
+      <td>Kansas City Chiefs</td>
+      <td>38–35</td>
+      <td>Philadelphia Eagles</td>
+      <td>Patrick Mahomes</td>
+      <td>State Farm Stadium (Glendale)</td>
+    </tr>
+    <tr>
+      <td>LVI</td>
+      <td>2021</td>
+      <td>Feb 13, 2022</td>
+      <td>Los Angeles Rams</td>
+      <td>23–20</td>
+      <td>Cincinnati Bengals</td>
+      <td>Cooper Kupp</td>
+      <td>SoFi Stadium (Inglewood)</td>
+    </tr>
+    <tr>
+      <td>LV</td>
+      <td>2020</td>
+      <td>Feb 7, 2021</td>
+      <td>Tampa Bay Buccaneers</td>
+      <td>31–9</td>
+      <td>Kansas City Chiefs</td>
+      <td>Tom Brady</td>
+      <td>Raymond James Stadium (Tampa)</td>
+    </tr>
+    <tr>
+      <td>LIV</td>
+      <td>2019</td>
+      <td>Feb 2, 2020</td>
+      <td>Kansas City Chiefs</td>
+      <td>31–20</td>
+      <td>San Francisco 49ers</td>
+      <td>Patrick Mahomes</td>
+      <td>Hard Rock Stadium (Miami Gardens)</td>
+    </tr>
+    <!-- Extend this table with further rows for previous Super Bowls -->
+  </tbody>
+</table>
 </body>
 </html>
